tests/baselines/reference/qualify.errors.txt
tests/cases/compiler/qualify.ts(21,13): error TS2322: Type '3' is not assignable to type 'I'.
tests/cases/compiler/qualify.ts(30,13): error TS2322: Type '3' is not assignable to type 'I2'.
tests/cases/compiler/qualify.ts(45,13): error TS2322: Type 'I4' is not assignable to type 'I3'.
  Property 'zeep' is missing in type 'I4'.
tests/cases/compiler/qualify.ts(46,13): error TS2322: Type 'I4' is not assignable to type 'I3[]'.
  Property 'length' is missing in type 'I4'.
tests/cases/compiler/qualify.ts(47,13): error TS2322: Type 'I4' is not assignable to type '() => I3'.
  Type 'I4' provides no match for the signature '(): I3'.
tests/cases/compiler/qualify.ts(48,13): error TS2322: Type 'I4' is not assignable to type '(k: I3) => void'.
  Type 'I4' provides no match for the signature '(k: I3): void'.
tests/cases/compiler/qualify.ts(49,13): error TS2322: Type 'I4' is not assignable to type '{ k: I3; }'.
  Property 'k' is missing in type 'I4'.
tests/cases/compiler/qualify.ts(58,5): error TS2322: Type 'I' is not assignable to type 'T.I'.
  Property 'p' is missing in type 'I'.


==== tests/cases/compiler/qualify.ts (8 errors) ====
    module M {
        export var m=0;
        export module N {
            export var n=1;
        }
    }
    
    module M {
        export module N {
            var y=m;
            var x=n+y;
        }
    }
    
    
    module T {
        export interface I {
            p;
        }
        export module U {
            var z:I=3;
                ~
!!! error TS2322: Type '3' is not assignable to type 'I'.
            export interface I2 {
                q;
            }
        }
    }
    
    module Peer {
        export module U2 {
            var z:T.U.I2=3;
                ~
!!! error TS2322: Type '3' is not assignable to type 'I2'.
        }
    }
    
    module Everest {
        export module K1 {
            export interface I3 {
                zeep;
            }
        }
        export module K2 {
            export interface I4 {
                z;
            }
            var v1:I4;
            var v2:K1.I3=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type 'I3'.
!!! error TS2322:   Property 'zeep' is missing in type 'I4'.
            var v3:K1.I3[]=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type 'I3[]'.
!!! error TS2322:   Property 'length' is missing in type 'I4'.
            var v4:()=>K1.I3=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '() => I3'.
!!! error TS2322:   Type 'I4' provides no match for the signature '(): I3'.
            var v5:(k:K1.I3)=>void=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '(k: I3) => void'.
!!! error TS2322:   Type 'I4' provides no match for the signature '(k: I3): void'.
            var v6:{k:K1.I3;}=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '{ k: I3; }'.
!!! error TS2322:   Property 'k' is missing in type 'I4'.
        }
    }
    
    interface I {
        k;
    }
    
    var y:I;
    var x:T.I=y;
        ~
!!! error TS2322: Type 'I' is not assignable to type 'T.I'.
!!! error TS2322:   Property 'p' is missing in type 'I'.
    
    